// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createDbWorker initializes > with external AppOwner 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        176,
        184,
        97,
        218,
        198,
        34,
        195,
        43,
        62,
        39,
        189,
        137,
        148,
        170,
        87,
        108,
        226,
        12,
        196,
        233,
        204,
        222,
        233,
        31,
        126,
        1,
        165,
        170,
        15,
        208,
        115,
        18,
      ],
      "id": "Gm2rxDYibpjp9MLQYgnXO",
      "mnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        223,
        255,
        201,
        168,
        127,
        27,
        26,
        188,
        250,
        180,
        237,
        65,
        254,
        6,
        128,
        233,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
]
`;

exports[`createDbWorker initializes > with external AppOwner 2`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "protocolVersion",
        ],
        "name": "evolu_version",
      },
      {
        "columns": [
          "clock",
          "appOwnerId",
          "appOwnerEncryptionKey",
          "appOwnerWriteKey",
          "appOwnerMnemonic",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "testTable",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "_testTable",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "evolu_version",
      "rows": [
        {
          "protocolVersion": 0,
        },
      ],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "appOwnerEncryptionKey": {
            "data": [
              176,
              184,
              97,
              218,
              198,
              34,
              195,
              43,
              62,
              39,
              189,
              137,
              148,
              170,
              87,
              108,
              226,
              12,
              196,
              233,
              204,
              222,
              233,
              31,
              126,
              1,
              165,
              170,
              15,
              208,
              115,
              18,
            ],
            "type": "Buffer",
          },
          "appOwnerId": "Gm2rxDYibpjp9MLQYgnXO",
          "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
          "appOwnerWriteKey": {
            "data": [
              223,
              255,
              201,
              168,
              127,
              27,
              26,
              188,
              250,
              180,
              237,
              65,
              254,
              6,
              128,
              233,
            ],
            "type": "Buffer",
          },
          "clock": "1970-01-01T00:00:00.000Z-0000-7ddd756f4414fa08",
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [],
    },
    {
      "name": "testTable",
      "rows": [],
    },
    {
      "name": "_testTable",
      "rows": [],
    },
    {
      "name": "evolu_timestamp",
      "rows": [],
    },
  ],
}
`;

exports[`createDbWorker initializes > with on-device created AppOwner 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        186,
        119,
        233,
        17,
        5,
        150,
        74,
        41,
        29,
        94,
        45,
        160,
        97,
        125,
        94,
        32,
        128,
        66,
        202,
        254,
        240,
        72,
        52,
        57,
        199,
        239,
        157,
        193,
        77,
        173,
        83,
        245,
      ],
      "id": "5kpiFDGNxM6IME5G0kyrb",
      "mnemonic": "course else upon gauge road there consider device rapid air foam inquiry crazy cancel first elegant suffer apple congress sketch toast flush hour uniform",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        198,
        199,
        211,
        6,
        14,
        201,
        148,
        187,
        0,
        140,
        1,
        229,
        87,
        119,
        66,
        146,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
]
`;

exports[`createDbWorker initializes > with on-device created AppOwner 2`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "protocolVersion",
        ],
        "name": "evolu_version",
      },
      {
        "columns": [
          "clock",
          "appOwnerId",
          "appOwnerEncryptionKey",
          "appOwnerWriteKey",
          "appOwnerMnemonic",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "testTable",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "_testTable",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "evolu_version",
      "rows": [
        {
          "protocolVersion": 0,
        },
      ],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "appOwnerEncryptionKey": {
            "data": [
              186,
              119,
              233,
              17,
              5,
              150,
              74,
              41,
              29,
              94,
              45,
              160,
              97,
              125,
              94,
              32,
              128,
              66,
              202,
              254,
              240,
              72,
              52,
              57,
              199,
              239,
              157,
              193,
              77,
              173,
              83,
              245,
            ],
            "type": "Buffer",
          },
          "appOwnerId": "5kpiFDGNxM6IME5G0kyrb",
          "appOwnerMnemonic": "course else upon gauge road there consider device rapid air foam inquiry crazy cancel first elegant suffer apple congress sketch toast flush hour uniform",
          "appOwnerWriteKey": {
            "data": [
              198,
              199,
              211,
              6,
              14,
              201,
              148,
              187,
              0,
              140,
              1,
              229,
              87,
              119,
              66,
              146,
            ],
            "type": "Buffer",
          },
          "clock": "1970-01-01T00:00:00.000Z-0000-bdcda18a93a71790",
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [],
    },
    {
      "name": "testTable",
      "rows": [],
    },
    {
      "name": "_testTable",
      "rows": [],
    },
    {
      "name": "evolu_timestamp",
      "rows": [],
    },
  ],
}
`;

exports[`local mutation 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        144,
        110,
        143,
        80,
        184,
        175,
        209,
        219,
        100,
        33,
        64,
        83,
        238,
        163,
        253,
        151,
        239,
        16,
        146,
        130,
        154,
        89,
        160,
        50,
        142,
        236,
        7,
        245,
        51,
        239,
        37,
        247,
      ],
      "id": "GV8OipKqk_GgSRrXoBPM1",
      "mnemonic": "train edit cover eagle repair liberty chief aisle rude hub unfold purchase believe sentence twin feel clown cushion hunt clerk pool ladder price chest",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        232,
        131,
        25,
        114,
        131,
        207,
        235,
        31,
        97,
        215,
        127,
        215,
        75,
        174,
        197,
        115,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "aZatCRQWsHyzIcuEpNN6C",
    "type": "onChange",
  },
  {
    "tabId": "aZatCRQWsHyzIcuEpNN6C",
    "type": "onReceive",
  },
]
`;

exports[`local mutation 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            144,
            110,
            143,
            80,
            184,
            175,
            209,
            219,
            100,
            33,
            64,
            83,
            238,
            163,
            253,
            151,
            239,
            16,
            146,
            130,
            154,
            89,
            160,
            50,
            142,
            236,
            7,
            245,
            51,
            239,
            37,
            247,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "GV8OipKqk_GgSRrXoBPM1",
        "appOwnerMnemonic": "train edit cover eagle repair liberty chief aisle rude hub unfold purchase believe sentence twin feel clown cushion hunt clerk pool ladder price chest",
        "appOwnerWriteKey": {
          "data": [
            232,
            131,
            25,
            114,
            131,
            207,
            235,
            31,
            97,
            215,
            127,
            215,
            75,
            174,
            197,
            115,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-a85f94137ff7f7e6",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.002Z",
        "id": "3PZ2J-jeCaHWuWhQJ3DR2",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.002Z",
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`local mutation 3`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            144,
            110,
            143,
            80,
            184,
            175,
            209,
            219,
            100,
            33,
            64,
            83,
            238,
            163,
            253,
            151,
            239,
            16,
            146,
            130,
            154,
            89,
            160,
            50,
            142,
            236,
            7,
            245,
            51,
            239,
            37,
            247,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "GV8OipKqk_GgSRrXoBPM1",
        "appOwnerMnemonic": "train edit cover eagle repair liberty chief aisle rude hub unfold purchase believe sentence twin feel clown cushion hunt clerk pool ladder price chest",
        "appOwnerWriteKey": {
          "data": [
            232,
            131,
            25,
            114,
            131,
            207,
            235,
            31,
            97,
            215,
            127,
            215,
            75,
            174,
            197,
            115,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-a85f94137ff7f7e6",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`mutate before init 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        144,
        55,
        88,
        138,
        121,
        213,
        186,
        106,
        16,
        100,
        134,
        249,
        154,
        93,
        91,
        193,
        250,
        221,
        53,
        253,
        18,
        140,
        83,
        206,
        202,
        163,
        236,
        136,
        6,
        204,
        165,
        70,
      ],
      "id": "Srq6blICymU18FUFtS_-D",
      "mnemonic": "answer hand solar help tennis rich glue author rotate finger coffee cool used face choose salt arm job dirt only flock flavor violin strategy",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        121,
        41,
        136,
        9,
        184,
        115,
        128,
        78,
        238,
        9,
        162,
        150,
        130,
        2,
        46,
        105,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "sAKxc3jir3c4AAUWg7IbJ",
    "type": "onChange",
  },
  {
    "tabId": "sAKxc3jir3c4AAUWg7IbJ",
    "type": "onReceive",
  },
]
`;

exports[`mutate before init 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            144,
            55,
            88,
            138,
            121,
            213,
            186,
            106,
            16,
            100,
            134,
            249,
            154,
            93,
            91,
            193,
            250,
            221,
            53,
            253,
            18,
            140,
            83,
            206,
            202,
            163,
            236,
            136,
            6,
            204,
            165,
            70,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "Srq6blICymU18FUFtS_-D",
        "appOwnerMnemonic": "answer hand solar help tennis rich glue author rotate finger coffee cool used face choose salt arm job dirt only flock flavor violin strategy",
        "appOwnerWriteKey": {
          "data": [
            121,
            41,
            136,
            9,
            184,
            115,
            128,
            78,
            238,
            9,
            162,
            150,
            130,
            2,
            46,
            105,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-698e7a230610c08d",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.001Z",
        "id": "RPBjgFeyTa9pE7z9KY-wz",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.001Z",
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`mutations 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        147,
        118,
        247,
        19,
        169,
        226,
        150,
        69,
        237,
        220,
        159,
        51,
        168,
        126,
        21,
        160,
        84,
        31,
        107,
        2,
        237,
        131,
        49,
        152,
        201,
        89,
        7,
        127,
        246,
        59,
        178,
        104,
      ],
      "id": "HvOtHZ8PsggdZL4fimxjC",
      "mnemonic": "crush truck build glare shuffle labor since clutch bind upon bacon reform latin document spawn tornado sign replace boy tiny ramp armor supply fetch",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        139,
        92,
        225,
        114,
        116,
        62,
        231,
        134,
        238,
        16,
        228,
        92,
        29,
        22,
        118,
        34,
      ],
    },
    "isFirst": true,
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "H6IMjs0eDYM5TJn7gEx0z",
    "type": "onChange",
  },
  {
    "tabId": "H6IMjs0eDYM5TJn7gEx0z",
    "type": "onReceive",
  },
]
`;

exports[`mutations 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            147,
            118,
            247,
            19,
            169,
            226,
            150,
            69,
            237,
            220,
            159,
            51,
            168,
            126,
            21,
            160,
            84,
            31,
            107,
            2,
            237,
            131,
            49,
            152,
            201,
            89,
            7,
            127,
            246,
            59,
            178,
            104,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "HvOtHZ8PsggdZL4fimxjC",
        "appOwnerMnemonic": "crush truck build glare shuffle labor since clutch bind upon bacon reform latin document spawn tornado sign replace boy tiny ramp armor supply fetch",
        "appOwnerWriteKey": {
          "data": [
            139,
            92,
            225,
            114,
            116,
            62,
            231,
            134,
            238,
            16,
            228,
            92,
            29,
            22,
            118,
            34,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0001-9492e8db11ff9af2",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [
      {
        "column": "name",
        "id": {
          "data": [
            80,
            255,
            221,
            26,
            45,
            163,
            9,
            164,
            240,
            249,
            179,
            61,
            181,
            216,
            93,
            188,
          ],
          "type": "Buffer",
        },
        "ownerId": {
          "data": [
            30,
            243,
            173,
            29,
            159,
            15,
            178,
            8,
            29,
            100,
            190,
            31,
            138,
            108,
            99,
            8,
          ],
          "type": "Buffer",
        },
        "table": "testTable",
        "timestamp": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            148,
            146,
            232,
            219,
            17,
            255,
            154,
            242,
          ],
          "type": "Buffer",
        },
        "value": "test",
      },
    ],
  },
  {
    "name": "testTable",
    "rows": [
      {
        "createdAt": null,
        "id": "UP_dGi2jCaTw-bM9tdhdv",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.000Z",
      },
    ],
  },
  {
    "name": "_testTable",
    "rows": [],
  },
  {
    "name": "evolu_timestamp",
    "rows": [
      {
        "c": 1,
        "h1": 87191005708463,
        "h2": 94229790346126,
        "l": 2,
        "ownerId": {
          "data": [
            30,
            243,
            173,
            29,
            159,
            15,
            178,
            8,
            29,
            100,
            190,
            31,
            138,
            108,
            99,
            8,
          ],
          "type": "Buffer",
        },
        "t": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            148,
            146,
            232,
            219,
            17,
            255,
            154,
            242,
          ],
          "type": "Buffer",
        },
      },
    ],
  },
]
`;

exports[`reset 1`] = `
{
  "schema": {
    "indexes": [],
    "tables": [],
  },
  "tables": [],
}
`;
